# granule-metgen

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  PROJECT_ASSESSMENT.md  README.md  geometry_logic_tables.md  pyproject.toml
.github/workflows/: build-test.yml  publish.yml  push.yml  workflow.yml
data/modscgdrf/: h07v03_Terra_20220415.v2023.1.nc  h08v05_Terra_20220415.v2023.1.nc
demo/: demo.ini
devdocs/: EXTENSIBLE_READER_ARCHITECTURE.md  PIPELINE_REFACTORING_CODE_EXAMPLES.md  PIPELINE_REFACTORING_PLAN.md  POLYGON_GENERATION_DOCUMENTATION.md  geometry_logic_tables.md
docs/: requirements.txt
docs/source/: api.rst  architecture.md  conf.py  developer-documentation.rst  index.rst  modules.rst  nsidc.metgen.rst  nsidc.rst  releases.rst
example/: modscg.ini
examples/cnm/: modscgdrf_cnm.json
examples/ummg/: modscgdrf_ummg.json
feature-docs/: current_geometry_handling_analysis.md  geometry-implementation-summary.md  geometry-refactoring-todo.md  geometry-resolution-implementation.md  geometry_resolver_implementation_plan.md
fixtures/: test.ini
fixtures/premet/: one_attribute.premet  platform_and_attribute.premet  platform_only.premet  two_attributes.premet
fixtures/spatial/: closed.spo  open.spo  test.spo
json/cnm/: h07v03_Terra_20220415.v2023.1.nc.cnm.json  h07v03_Terra_20220415.v2023.1_cnm.json  h08v05_Terra_20220415.v2023.1.nc.cnm.json  h08v05_Terra_20220415.v2023.1_cnm.json
json/ummg/: h07v03_Terra_20220415.v2023.1.nc.json  h08v05_Terra_20220415.v2023.1.nc.json
misc/: UPDATES_SINCE_MARCH_2025.md
scripts/: metgenc-env.sh
src/nsidc/: cli.py  granule_metgen.py  instameta.py
tests/: conftest.py  test_aws.py  test_cli.py  test_collection.py  test_collection_metadata.py  test_config.py  test_csv_reader.py  test_generic_reader.py  test_geometry_decisions.py  test_geometry_extractor.py  test_geometry_resolver.py  test_granule_metgen.py  test_metgen.py  test_netcdf_reader.py  test_reader_lookup.py  test_snowex_csv_reader.py  test_temporal_decisions.py  test_utilities.py
tests/integration/: README.md  __init__.py  run_integration_tests.py
tests/test_readers/: __init__.py  test_cmr_reader.py  test_csv_science_reader.py  test_generic_science_reader.py  test_netcdf_science_reader.py  test_premet_reader.py  test_science_reader.py  test_snowex_csv_science_reader.py  test_spatial_reader.py
tests/test_spatial/: __init__.py  conftest.py  test_cmr_client.py  test_polygon_generator.py  test_polygon_generator_auto.py  test_simple_polygon.py  (+2 more)
(+70 files in other folders)
