[tool.poetry]
name = "nsidc-metgen"
version = "0.1.0"
description = "The nsidc-metgen package enables data producers as well as Operations staff managing the data ingest workflow to create metadata files conforming to NASA's Common Metadata Repository UMM-G specification."
authors = ["National Snow and Ice Data Center (NSIDC) <nsidc@nsidc.org>"]
readme = "README.md"
package-mode = true
packages = [{include = "nsidc", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
pyfiglet = "^1.0.2"
netCDF4 = "^1.6.5"

rich = "^13.7.1"
[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["src", "tests"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = [
    "--import-mode=importlib",
]

[tool.poetry.scripts]
instameta = 'nsidc.metgen.cli:cli'
